# otus

./: .clang-format  CMakeLists.txt
include/: BaseException.h  BurnFuelCommand.h  ChangeVelocityCommand.h  CheckFuelCommand.h  CommandException.h  CommandQueue.h  CommandQueueProcessor.h  Direction.h  EmptyCommand.h  ExceptionDispatcher.h  ExceptionHandlerKey.h  ExceptionHandlerLocator.h  FuelTank.h  Helpers.h  ICommand.h  ICommandWrapper.h  IExceptionHandler.h  ILogger.h  IRotatableObject.h  IoC.h  LogCommand.h  LogExceptionHandler.h  MacroCommand.h  Magnitude.h  MoveCommand.h  NoAngularVelocityException.h  NoDirectionException.h  NoLocationException.h  NoMagnitudeException.h  NoVelocityException.h  NonMovableException.h  NonRotatableException.h  NotEnoughFuelException.h  Point.h  RepeatAndLogExceptionHandler.h  RepeatCommand.h  RepeatExceptionHandler.h  RepeatOnceCommand.h  RepeatOnceExceptionHandler.h  RepeatTwiceCommand.h  (+6 more)
src/: CommandQueue.cpp  CommandQueueProcessor.cpp  ExceptionDispatcher.cpp
tests/: BurnFuelCommandTest.cpp  CMakeLists.txt  ChangeVelocityCommandTest.cpp  CheckFuelCommandTest.cpp  FailCommand.h  LogCommandTest.cpp  MacroCommandMoveAndRotateTest.cpp  MacroCommandTest.cpp  MockCommand.h  MockOrderCommand.h  RepeatAndLogTest.cpp  RepeatCommandTest.cpp  TestException.h  TestExceptionHandler.h  TestLogger.h
tests/hw3/: CMakeLists.txt  CommandQueue.cpp  FailCommand2.h  RepeatAndLogTest.cpp  RepeatTwiceAndLogTest.cpp
tests/hw4/: CMakeLists.txt  MacroCommandMoveTest.cpp  MacroCommandTest.cpp
tests/hw5/: CMakeLists.txt  DelegateTest.cpp  IoCTest.cpp
